# Practicas-SO

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README2.md  auxiliar.c  auxiliar.h  color.h  comandos.c  comandos.h  help.c  help.h  hislist.c  hislist.h  main.c  memlist.c  memlist.h  memoria.c  memoria.h  procesos.c  procesos.h  proclist.c  proclist.h  searchlist.c  searchlist.h
P0/: .gitignore  CMakeLists.txt  Makefile  color.h  comandos.c  comandos.h  list.c  list.h  p0  p0.c
P1/: .gitignore  CMakeLists.txt  Makefile  README.md  comandos.c  comandos.h  help.c  help.h  list.h  main.c  memoria.c  memoria.h  p0.c
P2/: CMakeLists.txt  Makefile  README.md  auxiliar.c  auxiliar.h  color.h  comandos.c  comandos.h  help.c  help.h  hislist.c  hislist.h  list.c  list.h  main.c  memlist.c  memlist.h  memoria.c  memoria.h  tests.txt
P3/: .gitignore  CMakeLists.txt  Makefile  README.md  auxiliar.c  auxiliar.h  comandos.c  comandos.h  help.c  help.h  hislist.c  main.c  memlist.c  memlist.h  memoria.c  memoria.h  p3  procesos.c  procesos.h  proclist.c  proclist.h  searchlist.c  searchlist.h
P3/PDFs/P1/: helpcode.c
